--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: objective-c
-script: xcodebuild -workspace bitheri.xcworkspace -scheme bitheri -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild -workspace Bitheri.xcworkspace -scheme Bitheri -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
